# UWE

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.circleci/: config.yml
sample/: add.c  add.wasm  sample.c
src/: main.c
src/cmd/: placeholder.md
src/cmd/UWE/: main.c
src/common/: append.h  common.cc  config.h  errors.h  io.h  panic.h  placeholder.md  std.h  stringer.h  type.h  types.h
src/common/LEB128/: CMakeLists.txt  leb128.c
src/common/container/: CMakeLists.txt  check_me.h  container.c  container.h
src/common/container/array/: array.c  array.h
src/common/container/buffer/: buffer.c  buffer.h
src/common/container/byte_buffer/: byte_buffer.c  byte_buffer.h
src/common/container/deque/: deque.c  deque.h
src/common/container/list/: list.c  list.h
src/common/container/map/: map.c  map.h
src/common/container/set/: set.c  set.h
src/common/container/stack/: stack.c  stack.h
src/common/container/vector/: vector.c  vector.h
src/common/spec/: CMakeLists.txt  opcode.h  section_id.h  spec.c
src/common/spec/LEB128/: leb128.c  leb128.h
src/common/util/: CMakeLists.txt  debugtool.c  debugtool.h  endian.c  endian.h  pointer.c  pointer.h
src/common/wasmobj/: CMakeLists.txt  wasmobj.c  wasmobj.h
src/common/wasmobj/typeobj/: typeobj.c  typeobj.h
src/common/wasmobj/typeobj/funcobj/: funcobj.c  funcobj.h
src/common/wasmpec/: magic.h
src/common/wasmspec/: CMakeLists.txt  typecode.h
src/executor/: CMakeLists.txt
src/executor/vm/: vm.c  vm.h
src/parser/: CMakeLists.txt  parser.c  parser.h
test/: test_container.c  test_stdlib.c  test_type.c
tests/: placeholder.md
